--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" width="8" height="8" href="./src/assets/images/cards.svg" />
+    <link rel="icon" type="image/svg+xml" width="8" height="8" href="./src/assets/images/poke-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Memory Card</title>
+    <title>Poke Mem</title>
   </head>
   <body>
     <div id="root"></div>
