--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" width="8" height="8" href="./src/assets/images/poke-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Poke Mem</title>
+    <title>Poké Card</title>
   </head>
   <body>
     <div id="root"></div>
